--- a/test/number-field.html
+++ b/test/number-field.html
@@ -251,39 +251,6 @@
           expect(numberField.value).to.equal('0');
         });
 
-        it('should increase value to min value when increaseButton is clicked', () => {
-          numberField.min = 2;
-
-          increaseButton.click();
-
-          expect(numberField.value).to.be.equal('2');
-        });
-
-        it('should increase value to min value with step when increaseButton is clicked', () => {
-          numberField.step = 0.1;
-          numberField.min = 0.5;
-
-          increaseButton.click();
-
-          expect(numberField.value).to.be.equal('0.5');
-        });
-
-        it('should decrease value to max value when decreaseButton is clicked', () => {
-          numberField.max = -2;
-
-          decreaseButton.click();
-
-          expect(numberField.value).to.be.equal('-2');
-        });
-
-        it('should decrease value to max value with step when decreaseButton is clicked', () => {
-          numberField.step = 0.1;
-          numberField.max = -0.5;
-
-          decreaseButton.click();
-
-          expect(numberField.value).to.be.equal('-0.5');
-        });
 
         it('should decrease value to max value when value is over max and decreaseButton is clicked', () => {
           numberField.value = 50;
@@ -325,13 +292,6 @@
           expect(numberField.value).to.be.equal(String(numberField.min));
         });
 
-        it('should increase value to min value when value is not set and increaseButton is clicked', () => {
-          numberField.min = -10;
-
-          increaseButton.click();
-
-          expect(numberField.value).to.be.equal(String(numberField.min));
-        });
 
         it('should increase value to the closest step value when increaseButton is clicked', () => {
           numberField.min = -17;
@@ -354,6 +314,188 @@
             increaseButton.click();
             expect(numberField.value).to.be.equal(String(correctSteps[i]));
           }
+        });
+      });
+
+      describe('no initial value', () => {
+        describe('min is defined and max is undefined', () => {
+          it('should set value to the first step value above zero when min is below zero and increaseButton is clicked', () => {
+            numberField.min = -19;
+            numberField.step = 6;
+
+            increaseButton.click();
+
+            expect(numberField.value).to.be.equal('5');
+          });
+
+          it('should set value to the first step value below zero when min is below zero and decreaseButton is clicked', () => {
+            numberField.min = -19;
+            numberField.step = 6;
+
+            decreaseButton.click();
+
+            expect(numberField.value).to.be.equal('-1');
+          });
+
+          it('should set value to min when min is above zero and increaseButton is clicked', () => {
+            numberField.min = 19;
+            numberField.step = 6;
+
+            increaseButton.click();
+
+            expect(numberField.value).to.be.equal('19');
+          });
+
+          it('should set value to min when min is above zero and decreaseButton is clicked', () => {
+            numberField.min = 19;
+            numberField.step = 6;
+
+            decreaseButton.click();
+
+            expect(numberField.value).to.be.equal('19');
+          });
+        });
+
+        describe('max is defined and min is undefined', () => {
+          it('should set value to the closest to the max value when max is below zero and increaseButton is clicked', () => {
+            // -19 cannot be equally divided by 6
+            // The closest is -24, cause with the next stepUp it will become -18
+            numberField.max = -19;
+            numberField.step = 6;
+
+            increaseButton.click();
+
+            expect(numberField.value).to.be.equal('-24');
+          });
+
+          it('should set value to max when max is below zero and decreaseButton is clicked', () => {
+            numberField.max = -19;
+            numberField.step = 6;
+
+            decreaseButton.click();
+
+            expect(numberField.value).to.be.equal('-19');
+          });
+
+          it('should set value to the first step value above zero when max is above zero and increaseButton is clicked', () => {
+            numberField.max = 19;
+            numberField.step = 6;
+
+            increaseButton.click();
+
+            expect(numberField.value).to.be.equal('6');
+          });
+
+          it('should set value to the first step value below zero when max is above zero and decreaseButton is clicked', () => {
+            numberField.max = 19;
+            numberField.step = 6;
+
+            decreaseButton.click();
+
+            expect(numberField.value).to.be.equal('-6');
+          });
+        });
+
+        describe('min and max values are defined', () => {
+          it('should set value to the closest to the max when min is below zero and max is below zero and increaseButton is clicked', () => {
+            numberField.min = -20;
+            numberField.max = -3;
+            numberField.step = 6;
+
+            increaseButton.click();
+
+            expect(numberField.value).to.be.equal('-8');
+          });
+
+          it('should set value to min when min is above zero and max is above zero and increaseButton is clicked', () => {
+            numberField.min = 3;
+            numberField.max = 19;
+            numberField.step = 6;
+
+            increaseButton.click();
+
+            expect(numberField.value).to.be.equal('3');
+          });
+
+          it('should set value to min when min is above zero and max is below zero and increaseButton is clicked', () => {
+            numberField.min = 19;
+            numberField.max = -3;
+            numberField.step = 6;
+
+            increaseButton.click();
+
+            expect(numberField.value).to.be.equal('19');
+          });
+
+          it(`should set value to the first step value above zero when min is below zero 
+              and max is above zero and increaseButton is clicked`, () => {
+            numberField.min = -19;
+            numberField.max = 19;
+            numberField.step = 6;
+
+            increaseButton.click();
+
+            expect(numberField.value).to.be.equal('5');
+          });
+
+          it('should set value to max when min is below zero and max is below zero and decreaseButton is clicked', () => {
+            numberField.min = -19;
+            numberField.max = -3;
+            numberField.step = 6;
+
+            decreaseButton.click();
+
+            expect(numberField.value).to.be.equal('-3');
+          });
+
+          it('should set value to min when min is above zero and max is above zero and decreaseButton is clicked', () => {
+            numberField.min = 3;
+            numberField.max = 19;
+            numberField.step = 6;
+
+            decreaseButton.click();
+
+            expect(numberField.value).to.be.equal('3');
+          });
+
+          it('should set value to max when min is above zero and max is below zero and decreaseButton is clicked', () => {
+            numberField.min = 19;
+            numberField.max = -3;
+            numberField.step = 6;
+
+            decreaseButton.click();
+
+            expect(numberField.value).to.be.equal('-3');
+          });
+
+          it(`should set value to the first step value below zero when min is below zero and max 
+              is above zero and decreaseButton is clicked`, () => {
+            numberField.min = -19;
+            numberField.max = 19;
+            numberField.step = 6;
+
+            decreaseButton.click();
+
+            expect(numberField.value).to.be.equal('-1');
+          });
+        });
+
+        describe('min and max values are undefined', () => {
+          it('should set value to the first step value above zero when decreaseButton is clicked', () => {
+            numberField.step = 6;
+
+            increaseButton.click();
+
+            expect(numberField.value).to.be.equal('6');
+          });
+
+          it('should set value to the first step value below zero when decreaseButton is clicked', () => {
+            numberField.step = 6;
+
+            decreaseButton.click();
+
+            expect(numberField.value).to.be.equal('-6');
+          });
         });
       });
 
