--- a/src/vaadin-number-field.html
+++ b/src/vaadin-number-field.html
@@ -185,33 +185,25 @@ This program is available under Apache License Version 2.0, available at https:/
           let value = parseFloat(this.value);
 
           if (!this.value) {
-            if (this.max == null && this.min != null && this.min < 0 ||
-                this.max == null && this.min == null ||
-                this.max != null && this.min == null && this.max > 0 ||
-                this.max != null && this.min != null && this.min < 0 && this.max > 0) {
+            if ((this.max == null || this.max > 0) &&
+                (this.min == null || this.min < 0)) {
               value = 0;
-            } else if (this.max == null && this.min != null && this.min > 0 ||
-                       this.max != null && this.min != null && this.min > 0 && this.max > 0) {
-              incr = 0;
+            } else if (this.min > 0) {
               value = this.min;
-            } else if (this.max != null && this.min != null && this.min > 0 && this.max < 0) {
-              if (incr > 0) {
-                incr = 0;
-                value = this.min;
-              } else {
-                incr = 0;
+              if (this.max < 0 && incr < 0) {
                 value = this.max;
               }
-            } else if (this.max != null && this.min == null && this.max < 0 ||
-                       this.max != null && this.min != null && this.min < 0 && this.max < 0) {
+              incr = 0;
+            } else if (this.max < 0) {
+              value = this.max;
               if (incr < 0) {
                 incr = 0;
-                value = this.max;
-              } else if (incr > 0) {
-                if (this.min) {
-                  value = this.max - this.step;
+              } else {
+                // FIXME(yuriy): find a proper solution to make correct step back
+                if (this._getIncrement(1, value - this.step) > this.max) {
+                  value -= 2 * this.step;
                 } else {
-                  value = this.max - 2 * this.step;
+                  value -= this.step;
                 }
               }
             }
