--- a/src/vaadin-number-field.html
+++ b/src/vaadin-number-field.html
@@ -274,7 +274,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
         _allowed(sign) {
           const incr = sign * (this.step || 1);
-          const value = parseFloat(this.value);
+          const value = parseFloat(this.value) || 0;
           return !this.disabled && this._incrementIsInsideTheLimits(incr, value);
         }
 
