Don't adjust decimal places on min/step changed

--- a/test/number-field.html
+++ b/test/number-field.html
@@ -173,19 +173,21 @@
           expect(numberField.value).to.be.equal('6');
         });
 
-        it('should adjust decimals based on the step value', () => {
+        it('should adjust decimals based on the step value when control button is pressed', () => {
           numberField.value = 1;
           numberField.step = 0.001;
 
-          expect(numberField.value).to.be.equal('1.000');
+          increaseButton.click();
+          expect(numberField.value).to.be.equal('1.001');
         });
 
-        it('should adjust decimals based on the min value', () => {
+        it('should adjust decimals based on the min value when control button is pressed', () => {
           numberField.value = 1;
           numberField.step = 0.001;
           numberField.min = 0.0001;
 
-          expect(numberField.value).to.be.equal('1.0000');
+          increaseButton.click();
+          expect(numberField.value).to.be.equal('1.0001');
         });
 
         it('should not increase value when increaseButton is clicked and max value is reached', () => {
