Add label-suffix slot

--- a/theme/lumo/vaadin-text-field-styles.html
+++ b/theme/lumo/vaadin-text-field-styles.html
@@ -28,6 +28,13 @@
         align-items: center;
       }
 
+      [part="label-container"] {
+        display: flex;
+        justify-content: space-between;
+        line-height: 1;
+        font-size: var(--lumo-font-size-s);
+      }
+
       :host([focused]:not([readonly])) [part="label"] {
         color: var(--lumo-primary-text-color);
       }
