--- a/demo/index.html
+++ b/demo/index.html
@@ -20,6 +20,7 @@
   <link rel="import" href="../vaadin-number-field.html">
   <link rel="import" href="../../iron-form/iron-form.html">
   <link rel="import" href="../../vaadin-lumo-styles/icons.html">
+  <link rel="import" href="../../vaadin-button/vaadin-button.html">
 
   <!-- Used in the styling examples, keep in sync -->
   <dom-module id="my-text-field-styles" theme-for="vaadin-text-field vaadin-text-area">
