--- a/demo/text-field-validators-demos.html
+++ b/demo/text-field-validators-demos.html
@@ -5,9 +5,10 @@
         display: block;
       }
     </style>
-
-    <p>Fields are validated on blur. If a field is already invalid, its validity is checked on
-      each key input so that the user gets immediate feedback when the field is again valid.</p>
+    <p>Fields are validated on blur. If a field is already invalid, its validity is
+      checked on
+      each key input so that the user gets immediate feedback when the field is again
+      valid.</p>
 
     <h3>Required</h3>
     <p>A required field cannot be left empty.</p>
@@ -28,19 +29,27 @@
 
 
     <h3>Pattern</h3>
-    <p>The <code>pattern</code> property specifies a regular expression that the element’s value is
+    <p>The <code>pattern</code> property specifies a regular expression that the element’s
+      value is
       checked against.</p>
     <vaadin-demo-snippet id="text-field-basic-demos-pattern-validation">
       <template preserve-content>
-        <vaadin-text-field pattern="\d\d\d*" label="Min 2 numbers"></vaadin-text-field>
+        <vaadin-text-field pattern="[A-Z]{2}\d{3,4}$" label="Flight number"></vaadin-text-field>
+        <p>Valid flight number: 2 uppercase letters followed by 3 or 4 numbers. For
+          example:
+          SA1234</p>
       </template>
     </vaadin-demo-snippet>
 
 
     <h3>Prevent Invalid Input</h3>
+    <P>Username contains alphanumeric characters, underscores and dots.</P>
     <vaadin-demo-snippet id="text-field-basic-demos-preventing-invalid-input">
       <template preserve-content>
-        <vaadin-text-field prevent-invalid-input pattern="[0-9]*" label="Numbers only"></vaadin-text-field>
+        <vaadin-text-field prevent-invalid-input pattern="[a-zA-Z0-9_.]{0,20}"
+          label="Username"></vaadin-text-field>
+        <p>Valid username: Alphanumeric characters, underscores and dots. For example:
+          name.family</p>
       </template>
     </vaadin-demo-snippet>
 
@@ -49,11 +58,12 @@
 
     <p>Extend <code>Vaadin.TextFieldElement</code> to create your own custom element,
       then override the <code>checkValidity()</code> method to validate the user’s input.</p>
-
-    <vaadin-demo-snippet id="text-field-validators-demos-synchronous-custom-validator" ignore-ie when-defined="vaadin-text-field">
+    <vaadin-demo-snippet id="text-field-validators-demos-synchronous-custom-validator"
+      ignore-ie when-defined="vaadin-text-field">
       <template preserve-content>
-        <employee-role-text-field label="Position"></employee-role-text-field>
-        Valid options: Architect, Developer or Designer
+        <employee-role-text-field label="ID" minlength="10" maxlength="10"></employee-role-text-field>
+        <p>Valid ID: A 10 digit number that sum of the digits are dividable to 10. For
+          example 1111111111.</p>
 
         <script>
           window.addDemoReadyListener('#text-field-validators-demos-synchronous-custom-validator', function(document) {
@@ -61,8 +71,33 @@
               static get is() {
                 return 'employee-role-text-field';
               }
+
               checkValidity() {
-                return ['Architect', 'Developer', 'Designer'].indexOf(this.value) > -1;
+                var value = this.value;
+                var sum = 0;
+                var field = this;
+
+                if (isNaN(value)) {
+                  field.errorMessage = 'Must enter digits';
+                  return false;
+                }
+
+                if (this.value.length < 10) {
+                  field.errorMessage = 'Length must be 10 digits';
+                  return false;
+                }
+
+                while (value > 0) {
+                  sum += value % 10;
+                  value = Math.floor(value / 10);
+                }
+          
+                if (sum % 10 != 0) {
+                  field.errorMessage = 'ID is not correct';
+                  return false;
+                }
+                field.errorMessage = '';
+                return true;
               }
             }
 
@@ -71,7 +106,6 @@
             }
           });
         </script>
-
       </template>
     </vaadin-demo-snippet>
 
@@ -81,13 +115,11 @@
     <p>Extend <code>Vaadin.TextFieldElement</code> to create your own custom element,
       then override the <code>checkValidity()</code> to make your asynchronous validation,
       and finally set the <code>invalid</code> flag appropriately in the callback.</p>
-
-    <vaadin-demo-snippet id="text-field-validators-demos-asynchronous-custom-validator" ignore-ie when-defined="vaadin-text-field">
+    <vaadin-demo-snippet id="text-field-validators-demos-asynchronous-custom-validator"
+      ignore-ie when-defined="vaadin-text-field">
       <template preserve-content>
-        <my-ajax id="ajax1" handle-as="json" url="https://vaadin.com/validate-element"></my-ajax>
-        <chemical-element-text-field label="Element Name"></chemical-element-text-field>
-        Type a valid Chemical Element such as Hydrogen, Oxygen, Carbon, etc.
-
+        <chemical-element-text-field label="Username"></chemical-element-text-field>
+        <p>Valid username: Must be unique. For example, the username "Kamren" is taken.</p>
         <script>
           window.addDemoReadyListener('#text-field-validators-demos-asynchronous-custom-validator', function(document) {
             class ChemicalElement extends Vaadin.TextFieldElement {
@@ -97,17 +129,24 @@
 
               ready() {
                 super.ready();
-
-                this.ajax = document.getElementById('ajax1');
-                this.ajax.addEventListener('response', function() {
-                  var elementName = this.value || '';
-                  this.invalid = this.ajax.lastResponse.elements.indexOf(elementName.toLowerCase()) < 0;
-                  this.errorMessage = this.invalid ? elementName + 'is not a Chemical Element' : '';
-                }.bind(this));
               }
 
               checkValidity() {
-                this.ajax.generateRequest();
+                var xhr = new XMLHttpRequest();
+                var field = this;
+                const url = 'https://jsonplaceholder.typicode.com/users?username=' + this.value;
+                xhr.open('GET', url, true);
+                xhr.addEventListener('load', function() {
+                  const response = JSON.parse(xhr.responseText);
+                  if (response && response.length > 0) {
+                    field.invalid = true;
+                    field.errorMessage = 'Username is already taken';
+                  } else {
+                    field.invalid = false;
+                    field.errorMessage = '';
+                  }
+                });
+                xhr.send();
                 return true;
               }
             }
@@ -117,14 +156,13 @@
             }
           });
         </script>
-
       </template>
     </vaadin-demo-snippet>
 
-  <dom-module id="my-ajax">
-    <template>
-    </template>
-    <script>
+    <dom-module id="my-ajax">
+      <template>
+      </template>
+      <script>
         Polymer({
           is: 'my-ajax',
 
@@ -134,130 +172,10 @@
             }.bind(this), 1000);
           },
 
-          lastResponse: {'elements': [
-            'hydrogen',
-            'helium',
-            'lithium',
-            'beryllium',
-            'boron',
-            'carbon',
-            'nitrogen',
-            'oxygen',
-            'fluorine',
-            'neon',
-            'sodium',
-            'magnesium',
-            'aluminum',
-            'silicon',
-            'phosphorus',
-            'sulfur',
-            'chlorine',
-            'argon',
-            'potassium',
-            'calcium',
-            'scandium',
-            'titanium',
-            'vanadium',
-            'chromium',
-            'manganese',
-            'iron',
-            'cobalt',
-            'nickel',
-            'copper',
-            'zinc',
-            'gallium',
-            'germanium',
-            'arsenic',
-            'selenium',
-            'bromine',
-            'krypton',
-            'rubidium',
-            'strontium',
-            'yttrium',
-            'zirconium',
-            'niobium',
-            'molybdenum',
-            'technetium',
-            'ruthenium',
-            'rhodium',
-            'palladium',
-            'silver',
-            'cadmium',
-            'indium',
-            'tin',
-            'antimony',
-            'tellurium',
-            'iodine',
-            'xenon',
-            'cesium',
-            'barium',
-            'lanthanum',
-            'cerium',
-            'praseodymium',
-            'neodymium',
-            'promethium',
-            'samarium',
-            'europium',
-            'gadolinium',
-            'terbium',
-            'dysprosium',
-            'holmium',
-            'erbium',
-            'thulium',
-            'ytterbium',
-            'lutetium',
-            'hafnium',
-            'tantalum',
-            'tungsten',
-            'rhenium',
-            'osmium',
-            'iridium',
-            'platinum',
-            'gold',
-            'mercury',
-            'thallium',
-            'lead',
-            'bismuth',
-            'polonium',
-            'astatine',
-            'radon',
-            'francium',
-            'radium',
-            'actinium',
-            'thorium',
-            'protactinium',
-            'uranium',
-            'neptunium',
-            'plutonium',
-            'americium',
-            'curium',
-            'berkelium',
-            'californium',
-            'einsteinium',
-            'fermium',
-            'mendelevium',
-            'nobelium',
-            'lawrencium',
-            'rutherfordium',
-            'dubnium',
-            'seaborgium',
-            'bohrium',
-            'hassium',
-            'meitnerium',
-            'ununnilium',
-            'unununium',
-            'ununbium',
-            'ununtrium',
-            'ununquadium',
-            'ununpentium',
-            'ununhexium',
-            'ununseptium',
-            'ununoctium'
-          ]}
         });
 
     </script>
-  </dom-module>
+    </dom-module>
 
   </template>
   <script>
