--- a/demo/text-field-basic-demos.html
+++ b/demo/text-field-basic-demos.html
@@ -6,7 +6,6 @@
       }
     </style>
 
-
     <h3>Label, Placeholder and Value</h3>
     <vaadin-demo-snippet id="text-field-basic-demos-label-placeholder-value">
       <template preserve-content>
@@ -21,7 +20,7 @@
     <vaadin-demo-snippet id="text-field-basic-demos-states">
       <template preserve-content>
         <vaadin-text-field label="Disabled" value="Value" disabled></vaadin-text-field>
-        <vaadin-text-field label="Read-only" value="Value" read-only></vaadin-text-field>
+        <vaadin-text-field label="Read-only" value="Value" readonly></vaadin-text-field>
       </template>
     </vaadin-demo-snippet>
 
@@ -33,7 +32,8 @@
     </vaadin-demo-snippet>
 
     <h3>Display the Clear Button</h3>
-    <p>Use the <code>clear-button-visible</code> attribute to display the clear button of an individual text field.</p>
+    <p>Use the <code>clear-button-visible</code> attribute to display the clear button of
+      an individual text field.</p>
     <vaadin-demo-snippet id="text-field-basic-demos-clear-button">
       <template preserve-content>
         <vaadin-text-field clear-button-visible value="Value"></vaadin-text-field>
