Fix review changes
Fix review changes

--- a/demo/text-field-validators-demos.html
+++ b/demo/text-field-validators-demos.html
@@ -33,9 +33,7 @@
     <vaadin-demo-snippet id="text-field-basic-demos-pattern-validation">
       <template preserve-content>
         <vaadin-text-field pattern="[A-Z]{2}\d{3,4}" label="Flight number"></vaadin-text-field>
-        <p>Valid flight number: 2 uppercase letters followed by 3 or 4 numbers. For
-          example:
-          SA1234</p>
+        <p>Valid flight number: 2 uppercase letters followed by 3 or 4 numbers. For example: SA1234</p>
       </template>
     </vaadin-demo-snippet>
 
